--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ h1 {
   background-color: orange;
   color: black;
   font-size: 30px;
-  ;
+  text-align: center;
   margin-left: 600px;
   margin-right: 645px;
   margin-top: 300;
@@ -28,22 +28,36 @@ h2 {
   background-color: orange;
   color: black;
   font-size: 25px;
-  
+  text-align: center;
 
 }
 
 aside {
   background-color: orange;
-  margin-left: 30px;
-  margin-right: 1200px;
-  margin-top: 35px;
-  margin-bottom: 350px;
-
+  margin-top: 0px;
+  height: 500px;
+  width: 250px;
+ 
 }
 
 ul {
   margin-left: 30px;
   margin-right: 30px;
-  margin-top: 35px;
+  margin-top: 1px;
   margin-bottom: 100px;
+  padding-left: 0px;
+  height: 40px;
 }
+ li{
+  margin-bottom: 60px;
+  font-size: 25px;
+  color: white;
+
+ }
+ li
+
+ a {
+  text-decoration: none;
+  color: lightblue;
+}
+ 
