--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ ul {
   padding-left: 0px;
   height: 40px;
 }
- li{
+ li {
   margin-bottom: 60px;
   font-size: 25px;
   color: white;
@@ -58,6 +58,9 @@ ul {
 
  a {
   text-decoration: none;
-  color: lightblue;
+  color: whitesmoke;
 }
  
+.mypics {
+  
+}
